[project]
name = "berker-genai-tools"
version = "0.1.0"
description = "A reusable Python library for GenAI tools, LLM utilities, prompts, and simple agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Burak Berker Başergün", email = "bberkerbasergun@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"